# StructuralOptimization

./: DENSITY_XML_INITIALIZATION.md  LICENSE  Optimization_overview copy.txt  README.md  pyproject.toml
density files/: 5bar_200.density.xml  bridge_120.density.xml  bridge_240.density.xml  cantilever_100.density.xml
densityfiles/: 2bar_100.density.xml  2bar_30.density.xml  5bar_80.density.xml  cantilever_40.density.xml  truncated.density.xml
dtest/: extracted_shapes.json  s0_init_from_density.txt
lut_cache/: bezier_lut_o5_a0.0250_b0.0250_g0.0125_n256.npz
mech_config/: mech_bridge.xml  mech_cantilever.xml  mech_five_bar.xml  mech_two_bar.xml
opt_config/: Bezier_example_one_stage.json  Density_Bezier_example_one_stage copy.json  bezier.json  config_from_density_example.json  example_derivative_test.json  example_one_stage.json  example_run.json
scripts/: bezier.py  bezier_lut.py  bezier_math.py  density_xml_utils.py  feature_definition.py  optimization_definition.py  optimize.py
test/convergence_stage_0/: log_stage_0.txt
