[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyipopt>=1.7.0",
    "imageio>=2.37.3",
    "matplotlib>=3.10.9",
    "numba>=0.60.0",
    "numpy<2.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1"
]